# empathaicoach

./: DEPLOYMENT.md  EMOTION_VISUALIZATION_IMPLEMENTATION.md  ENVIRONMENT_VARIABLES.md  HACKATHON_DEPLOYMENT.md  NO_DOCKER_DEPLOYMENT.md  PIPECAT_CLOUD_QUICKSTART.md  QUICK_START.md  README.md  README_Deployment.md  SIMPLE_DEPLOYMENT.md  TESTING_README.md  TEST_SUMMARY.md  TROUBLESHOOTING.md  deploy-hackathon.sh  deploy-render.sh  run_all_tests.sh
client/: AUDIO_FIX.md  FINAL_STATUS.md  FRONTEND_TESTING_GUIDE.md  INSTALLATION.md  PROXY_SETUP.md  REFACTORING_NOTES.md  TROUBLESHOOTING.md  env.example  package-lock.json  package.json  tsconfig.tsbuildinfo  validate-components.js
sample-feedback/: CONVERSATION_GUIDE_OVERVIEW.md  QUICK_START.md  README.md  conversation-guide-1-mixed.md  conversation-guide-2-challenging.md  conversation-guide-3-positive.md  conversation-guide-4-new-employee.md  conversation-guide-5-simple.md  feedback-example-1-mixed.json  feedback-example-2-challenging.json  feedback-example-3-positive.json  (+2 more)
server/: Dockerfile  bot.py  build-and-deploy.sh  env.example  pcc-deploy.toml  pyproject.toml  requirements.txt  test_api.py  test_database.py  test_database_comprehensive.py  test_emotion_detection.py  test_end_to_end.py  test_phase_transitions.py  test_r2c2_engine.py
server/api/: README.md  __init__.py  feedback_parser.py  models.py  routes.py  server.py
server/database/: __init__.py  schema.py  session_db.py
server/processors/: __init__.py  emotion_processor.py  r2c2_processor.py
server/r2c2/: __init__.py  emotion_detector.py  engine.py
(+24 files in other folders)
